# django_app_menu

./: README.md  pyproject.toml
config/: settings.py  urls.py
tree_menu/: admin.py  models.py
tree_menu/migrations/: 0001_initial.py
tree_menu/templates/: index.html
tree_menu/templates/menu/: draw_menu.html  menu_item.html
tree_menu/templatetags/: draw_menu.py
